# Ferrum-Store

./: .gitignore  README.md  package-lock.json  package.json
backend/: Cargo.toml  Dockerfile  REDIS_DESIGN.md  docker-compose.yml
backend/migrations/: 20260217024235_init_schema.sql
backend/src/: main.rs
backend/src/config/: mod.rs
backend/src/handlers/: file.rs  folder.rs  user.rs
backend/src/middleware/: auth.rs
backend/src/models/: mod.rs
backend/src/services/: auth.rs  minio.rs  mod.rs  redis_cache.rs
backend/src/state/: mod.rs
src/app/: globals.css  layout.js  page.jsx
src/components/: ClientProviders.js  ClientProviders.jsx  DriveHeader.jsx  DriveLayout.js  DriveLayout.jsx  DriveMain.js  DriveMain.jsx  DriveSidebar.js  DriveSidebar.jsx  LoginModal.jsx  RightPanel.js
src/context/: AuthContext.js
src/data/: homeData.js  homeData.jsx  mockFiles.jsx
src/utils/: api.js
