[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "mysql", "uuid", "chrono"] }
redis = { version = "0.24", features = ["tokio-comp"] }
jsonwebtoken = "9.2"
aws-sdk-s3 = "1.4"
aws-config = "1.0"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
validator = { version = "0.16", features = ["derive"] }
bcrypt = "0.15"
base64 = "0.21"
config = "0.13"
regex = "1.10"
mime_guess = "2.0"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
dashmap = "5.5"
md5 = "0.7"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
urlencoding = "2.1"
thiserror = "2.0.18"
